# wedding-invites

./: .gitignore  .prettierrc  README.md  deploy.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
api/: README.md  alembic.ini  pyproject.toml
api/src/: application.py  auth.py  enums.py  main.py
api/src/configs/: __init__.py  log.py  settings.py
api/src/database/: session.py
api/src/errors/: __init__.py  base.py  handlers.py  request.py  validation.py
api/src/lifespan/: __init__.py  database.py  lifespan.py
api/src/migrations/: env.py  script.py.mako
api/src/migrations/versions/: 0001_create_rsvp_table.py
api/src/models/: __init__.py  base.py  rsvp.py
api/src/repos/: __init__.py  rsvp.py  uow.py
api/src/routes/: __init__.py  internal.py
api/src/routes/v1/: __init__.py  rsvp.py
api/src/schemas/: base.py  rsvp.py
api/src/services/: __init__.py  rsvp.py
api/src/utils/: application_version.py  validation.py
scripts/: convert-to-webp.ts
src/: App.tsx  config.ts  main.tsx  styles.css
src/components/admin/login/: LoginForm.tsx
src/components/admin/rsvp-table/: ConfirmDelete.tsx  RSVPTable.module.css  RSVPTable.schema.ts  RSVPTable.tsx
src/components/background-music/: BackgroundMusic.module.css  BackgroundMusic.tsx
src/components/countdown/: Countdown.module.css  Countdown.tsx
src/components/gallery/: Gallery.module.css  Gallery.tsx
src/components/hero/: Hero.module.css  Hero.tsx
src/components/location/: Location.module.css  Location.tsx
src/components/rsvp/: ErrorMessage.tsx  RSVP.module.css  RSVP.shema.ts  RSVP.tsx
src/components/shared-album/: SharedAlbum.module.css  SharedAlbum.tsx
src/hooks/: useAuth.ts
src/pages/: AdminPage.module.css  AdminPage.tsx  Adminpage.module.css  LandingPage.tsx
src/utils/: date.ts
