[project]
name = "wedding-invites-api"
version = "0.1.0"
description = "Wedding Invites API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "--log-cli-level=WARNING --cov=src --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"


[tool.pytest_env]
BE_APP_ENVIRONMENT = "test"
BE_DB_NAME = "test_jpdy.db"
BE_DB_APPLY_MIGRATIONS = "True"

[[tool.uv.index]]
url = "https://gitlab.com/api/v4/groups/85970482/-/packages/pypi/simple"

[tool.coverage.run]
omit = [
    "src/migrations/*",
    "src/models/*",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
indent-style = "space"

[tool.ruff.lint]
select = [
    "F", # Pyflakes (basic Python errors)
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort (import sorting)
    "UP", # pyupgrade (Python version upgrade)
    "B", # flake8-bugbear (common bugs)
    "COM", # flake8-commas (trailing commas!)
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "PT", # flake8-pytest-style
    "ISC", # flake8-implicit-str-concat
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401", # Allow Any type annotations
    "ANN204", # Don't require return type annotation for __init__ methods
    "ANN002", # Don't require type annotation for *args
    "ANN003", # Don't require type annotation for **kwargs
]

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 2
max-statements = 50
max-locals = 15
max-public-methods = 20

[tool.ruff.lint.isort]
split-on-trailing-comma = true
force-wrap-aliases = true
combine-as-imports = false

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in all __init__.py files
"**/__init__.py" = ["F401"]
# Ignore undefined name in **/models for model declarations in SQLAlchemy relationships.
# Ignore mutable class attributes in **/models for table args declations in SQLAlchemy models.
"**/models/*" = ["F821", "RUF012"]
# Ignore long lines for migrations.
"src/migrations/versions/*.py" = ["E501"]
# Don't require return type for API route functions
"src/routes/**/*.py" = ["ANN201"]
# Ignore type annotations for tests
"**/tests/**" = ["ANN"]
